--- a/src/app/components/models/models-list/models-list.component.html
+++ b/src/app/components/models/models-list/models-list.component.html
@@ -40,11 +40,11 @@
                 }}
               </td>
               <td>
-                {{ 'front: ' + model.texture.front }}<br />
-                {{ 'back: ' + model.texture.back }}<br />
-                {{ 'side: ' + model.texture.side }}<br />
-                {{ 'top: ' + model.texture.top }}<br />
-                {{ 'botom: ' + model.texture.botom }}
+                <a href="{{ model.texture.front }}">front</a>,
+                <a href="{{ model.texture.back }}">back</a>,
+                <a href="{{ model.texture.side }}">side</a>,
+                <a href="{{ model.texture.top }}">top</a>,
+                <a href="{{ model.texture.botom }}">botom</a>
               </td>
               <td>{{ model.type }}</td>
               <td>{{ model.category }}</td>
@@ -70,6 +70,14 @@
                   >
                     Delete
                   </button>
+                  <button
+                    type="button"
+                    id="clone-device"
+                    class="btn btn-info btn-sm"
+                    (click)="CloneModel(model.id)"
+                  >
+                    Clone
+                  </button>
                 </div>
               </td>
             </tr>
@@ -85,9 +93,10 @@
       </div>
     </div>
   </div>
+  <pagination-controls
+    (pageChange)="page = $event"
+    id="modelPagination"
+  ></pagination-controls>
 </div>
-<pagination-controls
-  (pageChange)="page = $event"
-  id="modelPagination"
-></pagination-controls>
+
 <app-log></app-log>
