--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -60,12 +60,12 @@
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
-              <label for="form-dimension-width" class="form-label">Width</label>
+              <label for="width" class="form-label">Width</label>
               <input
                 type="text"
-                formControlName="dimension-width"
+                formControlName="width"
                 class="form-control"
-                id="form-dimension-width"
+                id="width"
               />
             </div>
           </div>
