--- a/src/app/components/devices/devices-list/devices-list.component.html
+++ b/src/app/components/devices/devices-list/devices-list.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="inner">
-        <h3>My Devices</h3>
+        <h4>Devices</h4>
         <table class="table table-striped table-dark table-hover">
           <thead>
             <tr>
@@ -81,4 +81,4 @@
   ></pagination-controls>
 </div>
 
-<app-log></app-log>
+<app-log [component]="component"></app-log>
