--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,1 @@
-<markdown
-  [srcRelativeLink]="true"
-  [data]="md"
-  (load)="onLoad($event)"
-  (error)="onError($event)"
-></markdown>
+<markdown [srcRelativeLink]="true" [data]="md"></markdown>
