--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -2,125 +2,143 @@
   <div class="row">
     <div class="col-md-12">
       <h3>Edit Device</h3>
-
       <form [formGroup]="editForm" (ngSubmit)="submitForm()">
-        <div class="form-group mb-3">
-          <label for="form-id" class="form-label">Id</label>
-          <input
-            type="text"
-            formControlName="id"
-            id="form-id"
-            maxlength="20"
-            minlength="4"
-            required
-            [ngClass]="{
-              'is-invalid': this.editForm.controls.id.status != 'VALID',
-              'form-control': true
-            }"
-          />
-          <div *ngIf="f.id.errors" class="invalid-feedback">
-            <div *ngIf="f.id.errors.required">Id is required</div>
-            <div *ngIf="f.id.errors.minlength">
-              Id must be at least 4 characters
-            </div>
-          </div>
-          <p>
-            Value: {{ editForm.value.id }} -
-            {{ this.editForm.controls.id.status }}
-          </p>
-        </div>
-
-        <div class="form-group mb-3">
-          <label for="form-name" class="form-label">Name</label>
-          <textarea
-            [ngClass]="{
-              'is-invalid': this.editForm.controls.name.status != 'VALID',
-              'form-control': true
-            }"
-            formControlName="name"
-            rows="2"
-            minlength="4"
-            id="form-name"
-            maxlength="50"
-            >{{ editForm.value.name }}</textarea
-          >
-          <div
-            *ngIf="this.editForm.controls.name.errors"
-            class="invalid-feedback"
-          >
-            <div *ngIf="this.editForm.controls.name.errors.required">
-              Id is required
-            </div>
-            <div *ngIf="this.editForm.controls.name.errors.minlength">
-              Id must be at least 4 characters
-            </div>
-          </div>
-        </div>
-
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
-              <label for="width" class="form-label">Width</label>
+              <label for="id" class="form-label">Id</label>
+              <input
+                class="disabled"
+                type="text"
+                formControlName="id"
+                id="id"
+                required
+                [ngClass]="{
+                  'is-invalid': this.editForm.controls.id.status != 'VALID',
+                  'form-control': true
+                }"
+                readonly
+              />
+              <div
+                *ngIf="this.editForm.controls.id.errors"
+                class="invalid-feedback"
+              >
+                <div *ngIf="this.editForm.controls.id.errors.required">
+                  Id is required
+                </div>
+                <div *ngIf="this.editForm.controls.id.errors.minlength">
+                  Id must be at least 4 characters
+                </div>
+              </div>
+              <p>
+                Value: {{ editForm.value.id }} -
+                {{ this.editForm.controls.id.status }}
+              </p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input
+                [ngClass]="{
+                  'is-invalid': this.editForm.controls.name.status != 'VALID',
+                  'form-control': true
+                }"
+                formControlName="name"
+                minlength="4"
+                id="name"
+                required
+                maxlength="255"
+              />
+              <div
+                *ngIf="this.editForm.controls.name.errors"
+                class="invalid-feedback"
+              >
+                <div *ngIf="this.editForm.controls.name.errors.required">
+                  Name is required
+                </div>
+                <div *ngIf="this.editForm.controls.name.errors.minlength">
+                  Name must be at least 4 characters
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row" formGroupName="position">
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="x" class="form-label">x</label>
               <input
                 type="text"
-                formControlName="width"
+                formControlName="x"
                 class="form-control"
-                id="width"
+                id="x"
+                required
+                [ngClass]="{
+                  'is-invalid':
+                    this.editForm.controls.position.controls.x.status !=
+                    'VALID',
+                  'form-control': true
+                }"
               />
             </div>
           </div>
           <div class="col">
             <div class="form-group mb-3">
-              <label for="form-category" class="form-label">Height</label>
-              <select
-                (change)="changeCategory($event)"
-                formControlName="category"
+              <label for="y" class="form-label">y</label>
+              <input
+                type="text"
+                formControlName="y"
                 class="form-control"
-                id="form-category"
-              >
-                <option
-                  *ngFor="
-                    let categoryObj of deviceCategoryDict.list;
-                    let i = index
-                  "
-                >
-                  {{ categoryObj.name }}
-                </option>
-              </select>
+                id="y"
+                required
+                [ngClass]="{
+                  'is-invalid':
+                    this.editForm.controls.position.controls.y.status !=
+                    'VALID',
+                  'form-control': true
+                }"
+              />
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="h" class="form-label">h</label>
+              <input
+                type="text"
+                formControlName="h"
+                class="form-control"
+                id="h"
+                required
+                [ngClass]="{
+                  'is-invalid':
+                    this.editForm.controls.position.controls.h.status !=
+                    'VALID',
+                  'form-control': true
+                }"
+              />
             </div>
           </div>
         </div>
-
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
-              <label for="form-type" class="form-label">Type</label>
+              <label for="model_id" class="form-label">Model</label>
               <select
-                (change)="changeType($event)"
-                formControlName="type"
+                (change)="changeModel($event)"
+                formControlName="model_id"
                 class="form-control"
-                id="form-type"
-              >
-                <option
-                  *ngFor="let typeObj of deviceTypeDict.list; let i = index"
-                >
-                  {{ typeObj.name }}
-                </option>
-              </select>
-            </div>
-          </div>
-          <div class="col">
-            <div class="form-group mb-3">
-              <label for="form-category" class="form-label">Category</label>
-              <select
-                (change)="changeCategory($event)"
-                formControlName="category"
-                class="form-control"
-                id="form-category"
+                id="model_id"
+                required
+                [ngClass]="{
+                  'is-invalid':
+                    this.editForm.controls.model_id.status != 'VALID',
+                  'form-control': true
+                }"
               >
                 <option
                   *ngFor="
-                    let categoryObj of deviceCategoryDict.list;
+                    let categoryObj of modelsList.modelsList;
                     let i = index
                   "
                 >
@@ -130,7 +148,6 @@
             </div>
           </div>
         </div>
-
         <div class="form-group mb-3">
           <button
             type="submit"
