--- a/src/app/components/models/edit-model/edit-model.component.html
+++ b/src/app/components/models/edit-model/edit-model.component.html
@@ -3,54 +3,58 @@
     <div class="col-md-12">
       <h3>Edit Model</h3>
       <form [formGroup]="editForm" (ngSubmit)="submitForm()">
-        <div class="form-group mb-3">
-          <label for="form-id" class="form-label">Id</label>
-          <input
-            type="text"
-            formControlName="id"
-            id="form-id"
-            maxlength="20"
-            minlength="1"
-            required
-            [ngClass]="{
-              'is-invalid': this.editForm.controls.id.status != 'VALID',
-              'form-control': true
-            }"
-          />
-          <div *ngIf="f.id.errors" class="invalid-feedback">
-            <div *ngIf="f.id.errors.required">Id is required</div>
-            <div *ngIf="f.id.errors.minlength">
-              Id must be at least 4 characters
+        <div class="row">
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="form-id" class="form-label">Id</label>
+              <input
+                type="text"
+                formControlName="id"
+                id="form-id"
+                maxlength="20"
+                minlength="1"
+                required
+                [ngClass]="{
+                  'is-invalid': this.editForm.controls.id.status != 'VALID',
+                  'form-control': true
+                }"
+              />
+              <div *ngIf="f.id.errors" class="invalid-feedback">
+                <div *ngIf="f.id.errors.required">Id is required</div>
+                <div *ngIf="f.id.errors.minlength">
+                  Id must be at least 4 characters
+                </div>
+              </div>
+              <p>
+                Value: {{ editForm.value.id }} -
+                {{ this.editForm.controls.id.status }}
+              </p>
             </div>
           </div>
-          <p>
-            Value: {{ editForm.value.id }} -
-            {{ this.editForm.controls.id.status }}
-          </p>
-        </div>
-        <div class="form-group mb-3">
-          <label for="form-name" class="form-label">Name</label>
-          <textarea
-            [ngClass]="{
-              'is-invalid': this.editForm.controls.name.status != 'VALID',
-              'form-control': true
-            }"
-            formControlName="name"
-            rows="2"
-            minlength="4"
-            id="form-name"
-            maxlength="50"
-            >{{ editForm.value.name }}</textarea
-          >
-          <div
-            *ngIf="this.editForm.controls.name.errors"
-            class="invalid-feedback"
-          >
-            <div *ngIf="this.editForm.controls.name.errors.required">
-              Name is required
-            </div>
-            <div *ngIf="this.editForm.controls.name.errors.minlength">
-              Name must be at least 4 characters
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="name" class="form-label">Name</label>
+              <input
+                [ngClass]="{
+                  'is-invalid': this.editForm.controls.name.status != 'VALID',
+                  'form-control': true
+                }"
+                formControlName="name"
+                minlength="4"
+                id="name"
+                maxlength="255"
+              />{{ editForm.value.name }} />
+              <div
+                *ngIf="this.editForm.controls.name.errors"
+                class="invalid-feedback"
+              >
+                <div *ngIf="this.editForm.controls.name.errors.required">
+                  Name is required
+                </div>
+                <div *ngIf="this.editForm.controls.name.errors.minlength">
+                  Name must be at least 4 characters
+                </div>
+              </div>
             </div>
           </div>
         </div>
