--- a/src/app/components/models/edit-model/edit-model.component.html
+++ b/src/app/components/models/edit-model/edit-model.component.html
@@ -392,11 +392,12 @@
             </div>
           </div>
         </div>
-        <div class="form-group mb-3">
+        <div class="d-grid gap-2 d-md-block">
           <button
-            type="submit"
+            type="button"
             [disabled]="!(editForm.valid && editForm.touched)"
             class="btn btn-primary"
+            (click)="this.submitForm()"
             tooltip="Update device."
           >
             Update
@@ -409,17 +410,17 @@
           >
             <i class="bi bi-minus-lg"></i>Delete
           </button>
-          <div
-            *ngIf="editForm.valid && editForm.touched"
-            class="invalid-feedback"
-          >
-            Form is valid
-          </div>
-          <p>
-            Form Status: {{ editForm.status }}. Form Values:
-            {{ toString(editForm.value) }}
-          </p>
         </div>
+        <div
+          *ngIf="editForm.valid && editForm.touched"
+          class="invalid-feedback"
+        >
+          Form is valid
+        </div>
+        <p>
+          Form Status: {{ editForm.status }}. Form Values:
+          {{ toString(editForm.value) }}
+        </p>
       </form>
     </div>
   </div>
