Add eslintignore file and fix typos in component names and router links. Also, update test files to conform to coding standards.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,8 +45,8 @@
         >Connections</a
       >
       <a
-        class="nav-link disabled"
-        routerLink="/device-types"
+        class="nav-link"
+        routerLink="/attributes-types"
         routerLinkActive="active"
         ariaCurrentWhenActive="page"
         >Attributes</a
