Create crud forms for connection, attributes, attributes-dictionary and floors Fixes #13

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,28 +42,21 @@
         routerLink="/device-types"
         routerLinkActive="active"
         ariaCurrentWhenActive="page"
-        >Connections</a
+        >Attributes</a
       >
       <a
         class="nav-link"
-        routerLink="/attributes-types"
+        routerLink="/attribute-dictionary-list"
         routerLinkActive="active"
         ariaCurrentWhenActive="page"
-        >Attributes</a
+        >Attribute Dictionary</a
       >
       <a
         class="nav-link disabled"
         routerLink="/device-types"
         routerLinkActive="active"
         ariaCurrentWhenActive="page"
-        >Types</a
-      >
-      <a
-        class="nav-link disabled"
-        routerLink="/device-categories"
-        routerLinkActive="active"
-        ariaCurrentWhenActive="page"
-        >Categories</a
+        >Connections</a
       >
       <form class="d-flex">
         <input
